testing and adding two new folders

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -5,6 +5,16 @@
         <title>Title Here</title>
     </head>
     <body>
-       
+       <ul> Shopping list
+           <li>
+               eggs
+           </li>
+           <li>
+               potato
+           </li>
+           <li>
+               bacon
+           </li>
+       </ul>
     </body>
 </html>
